landoui/assets_src/css/components/Navbar.scss
@import "../colors";

.Navbar {
  .navbar-brand .navbar-item {
    padding-left: 0;
  }

  .Navbar-logo {
    max-height: 2.75rem;
  }

  .Navbar-title {
    font-weight: bold;
    font-size: 1.5rem;
    margin-left: 0.125rem;
    color: #000;
  }

  .Navbar-subtitle {
    color: #aaa;
    font-size: 1.5rem;
  }

  .Navbar-login {
    border: 1px solid $blue;
    color: $blue;
  }
}

